Hittest to prevent overlapping not really working

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ text{
   fill: none;
   stroke: rgba(0, 0, 0, 0.4);
   stroke-width: 1px;
+  pointer-events: none;
 }
 .matchLine.active{
   stroke: rgba(160, 0, 0, 1.0);
